--- a/IDCA.Client/View/StartWindow.xaml
+++ b/IDCA.Client/View/StartWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
@@ -123,6 +124,28 @@
                 <RowDefinition Height="100"/>
             </Grid.RowDefinitions>
 
+            <Button Grid.Row="0"
+                    Width="35"
+                    Height="35"
+                    HorizontalAlignment="Right"
+                    Margin="25, 20"
+                    Cursor="Hand"
+                    Command="{Binding LoadTemplateCommand}">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Grid Width="35"
+                              Height="35"
+                              Background="#00000000">
+                            <icon:PackIconMaterial Kind="Wrench"
+                                                   Width="30"
+                                                   Height="30"
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Center"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+            
             <TextBlock Grid.Row="1">项目名称</TextBlock>
             <StackPanel Grid.Row="2" Orientation="Horizontal">
                 <TextBox Text="{Binding ProjectName}"/>
@@ -155,6 +178,7 @@
                     Margin="30"
                     FontSize="15"
                     HorizontalAlignment="Right"
+                    IsEnabled="{Binding IsConfirmButtonEnable}"
                     Command="{Binding ConfirmCommand}"
                     CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}}"
                     >完成</Button>
