--- a/IDCA.Client/View/TableSettingWindow.xaml
+++ b/IDCA.Client/View/TableSettingWindow.xaml
@@ -19,10 +19,6 @@
         <BooleanToVisibilityConverter x:Key="BtoVConverter"/>
     </Window.Resources>
     
-    <Window.DataContext>
-        <viewmodel:TableSettingWindowViewModel/>
-    </Window.DataContext>
-
     <Grid>
 
         <Grid.RowDefinitions>
@@ -32,7 +28,13 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
-            <StackPanel Orientation="Horizontal">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="60"/>
+            </Grid.ColumnDefinitions>
+            
+            <StackPanel Grid.Column="0" Orientation="Horizontal">
                 <StackPanel.Resources>
                     <Style TargetType="Button">
                         <Setter Property="Margin" Value="5"/>
@@ -103,6 +105,27 @@
                 <TextBox Text="{Binding ExcelSettingFilePath}"/>
 
             </StackPanel>
+
+            <Button Grid.Column="1"
+                    Height="40"
+                    Width="60"
+                    Cursor="Hand"
+                    Command="{Binding ExecuteCommand}">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Grid Width="60"
+                              Height="40"
+                              Background="#00000000">
+                            <icon:PackIconMaterialDesign Kind="PlayArrow"
+                                                         Width="20"
+                                                         Height="20"
+                                                         VerticalAlignment="Center"
+                                                         HorizontalAlignment="Center"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+
         </Grid>
 
         <Grid Grid.Row="2">
