--- a/IDCA.Client/View/AxisSettingWindow.xaml
+++ b/IDCA.Client/View/AxisSettingWindow.xaml
@@ -1,18 +1,20 @@
-﻿<mah:MetroWindow x:Class="IDCA.Client.View.AxisSettingWindow"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                 xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
-                 xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                 d:DataContext="{d:DesignInstance Type=viewmodel:AxisSettingViewModel}"
-                 mc:Ignorable="d"
-                 Height="600" 
-                 Width="900"
-                 ResizeMode="CanMinimize"
-                 Background="{StaticResource IDCA.Brushes.Window.Background}">
+﻿<Window x:Class="IDCA.Client.View.AxisSettingWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        d:DataContext="{d:DesignInstance Type=viewmodel:AxisSettingViewModel}"
+        mc:Ignorable="d"
+        Height="600" 
+        Width="900"
+        ResizeMode="CanMinimize">
 
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Window.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
@@ -22,7 +24,7 @@
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="880"/>
             <ColumnDefinition Width="10"/>
         </Grid.ColumnDefinitions>
 
@@ -31,7 +33,7 @@
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="550"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="330"/>
             </Grid.ColumnDefinitions>
 
             <Grid Grid.Column="0">
@@ -66,9 +68,9 @@
                     </Grid.Resources>
 
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="285"/>
                         <!--<ColumnDefinition Width="40"/>-->
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="275"/>
                         <!--<ColumnDefinition Width="40"/>-->
                     </Grid.ColumnDefinitions>
 
@@ -80,8 +82,6 @@
                                    FontFamily="{StaticResource IDCA.Font.Family}"
                                    FontSize="15"
                                    FontWeight="Bold"/>
-
-                        <GridSplitter Width="{Binding RelativeSource={RelativeSource AncestorType=StackPanel}, Path=Width}" Height="1" />
 
                         <ListBox Margin="10 5"
                                  Height="300"
@@ -98,20 +98,22 @@
                             </ListBox.Resources>
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
-                                    <Grid Height="20">
+                                    <Grid Height="20"
+                                          Width="{Binding RelativeSource={RelativeSource AncestorType=ListBox, Mode=FindAncestor}, Path=Width}">
                                         <Grid.Resources>
                                             <Style TargetType="Button">
-                                                <Setter Property="Foreground" Value="{StaticResource MahApps.Brushes.Button.Flat.Foreground}"/>
                                                 <Setter Property="Cursor" Value="Hand"/>
                                             </Style>
                                         </Grid.Resources>
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="210"/>
                                             <ColumnDefinition Width="20"/>
                                         </Grid.ColumnDefinitions>
-                                        <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="{Binding Name}"/>
+                                        <TextBlock Grid.Column="0" 
+                                                   VerticalAlignment="Center" 
+                                                   Text="{Binding Name}"/>
                                         <Button Grid.Column="1" 
-                                                Command="{Binding AddCommand}">
+                                                Command="{Binding AddCommand}" Cursor="Hand">
                                             <Button.Template>
                                                 <ControlTemplate TargetType="Button">
                                                     <Grid Height="20"
@@ -131,8 +133,6 @@
                             </ListBox.ItemTemplate>
                         </ListBox>
 
-                        <GridSplitter Width="{Binding RelativeSource={RelativeSource AncestorType=StackPanel}, Path=Width}" Height="1" />
-
                     </StackPanel>
 
                     <StackPanel Grid.Column="2">
@@ -143,8 +143,6 @@
                                    FontFamily="{StaticResource IDCA.Font.Family}"
                                    FontSize="15"
                                    FontWeight="Bold"/>
-
-                        <GridSplitter Width="{Binding RelativeSource={RelativeSource AncestorType=StackPanel}, Path=Width}" Height="1" />
 
                         <!--<ListBox Margin="10 5"
                                  Height="250"
@@ -169,7 +167,7 @@
                                   ItemsSource="{Binding Tree}"
                                   d:ItemsSource="{d:SampleData ItemCount=5}">
                             <TreeView.ItemContainerStyle>
-                                <Style TargetType="TreeViewItem" BasedOn="{StaticResource MahApps.Styles.TreeViewItem}">
+                                <Style TargetType="TreeViewItem" BasedOn="{StaticResource MaterialDesignTreeViewItem}">
                                     <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}"/>
                                     <Setter Property="IsSelected" Value="{Binding IsSelected}"/>
                                 </Style>
@@ -179,14 +177,13 @@
                                     <Grid Height="25">
                                         <Grid.Resources>
                                             <Style TargetType="Button">
-                                                <Setter Property="Foreground" Value="{StaticResource MahApps.Brushes.Button.Flat.Foreground}"/>
                                                 <Setter Property="Cursor" Value="Hand"/>
                                                 <Setter Property="Width" Value="20"/>
                                                 <Setter Property="Height" Value="25"/>
                                             </Style>
                                         </Grid.Resources>
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="115"/>
                                             <ColumnDefinition Width="80"/>
                                         </Grid.ColumnDefinitions>
                                         <TextBlock Grid.Column="0" 
@@ -272,8 +269,6 @@
                                 </HierarchicalDataTemplate>
                             </TreeView.ItemTemplate>
                         </TreeView>
-
-                        <GridSplitter Width="{Binding RelativeSource={RelativeSource AncestorType=StackPanel}, Path=Width}" Height="1" />
 
                     </StackPanel>
                     
@@ -421,12 +416,12 @@
 
                 <TextBox Grid.Row="3"
                          Margin="10 5"
-                         BorderThickness="0 1 0 1"
-                         FontFamily="{StaticResource IDCA.Font.Family}"
-                         FontSize="14"
+                         FontFamily="{StaticResource MaterialDesignFont}"
+                         FontSize="15"
                          Background="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"
                          Text="{Binding AxisExpression}"
-                         TextWrapping="Wrap"/>
+                         TextWrapping="Wrap"
+                         Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
 
             </Grid>
 
@@ -448,9 +443,7 @@
                                FontSize="15"
                                FontWeight="Bold"/>
 
-                    <GridSplitter Width="{Binding RelativeSource={RelativeSource AncestorType=StackPanel}, Path=Width}" Height="1" />
-
-                    <ScrollViewer Height="200" VerticalScrollBarVisibility="Auto">
+                    <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
                         <ItemsControl Margin="10 5" 
                                       BorderThickness="0"
                                       Background="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"
@@ -466,14 +459,14 @@
                                                    FontSize="14"
                                                    VerticalAlignment="Center"
                                                    Text="{Binding Name}"/>
-                                        <Grid Width="150" 
+                                        <Grid Width="120" 
                                               Height="30">
-                                            <TextBox Width="130"
+                                            <TextBox Width="120"
                                                      FontSize="14"
                                                      VerticalContentAlignment="Center"
                                                      Text="{Binding Text}"
                                                      Visibility="{Binding IsTextBox, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                                            <ComboBox Width="130"
+                                            <ComboBox Width="120"
                                                       FontSize="14"
                                                       VerticalContentAlignment="Center"
                                                       ItemsSource="{Binding Selections}"
@@ -487,8 +480,6 @@
                         
                     </ScrollViewer>
 
-                    <GridSplitter Width="{Binding RelativeSource={RelativeSource AncestorType=StackPanel}, Path=Width}" Height="1" />
-
                     <TextBlock Grid.Row="3"
                                Margin="10 10 0 5"
                                Text="后缀配置"
@@ -496,9 +487,7 @@
                                FontFamily="{StaticResource IDCA.Font.Family}"
                                FontSize="15"
                                FontWeight="Bold"/>
-
-                    <GridSplitter Width="{Binding RelativeSource={RelativeSource AncestorType=StackPanel}, Path=Width}" Height="1" />
-
+                    
                     <ScrollViewer Height="255" VerticalScrollBarVisibility="Auto">
                     
                         <ItemsControl Margin="10 5" 
@@ -509,22 +498,26 @@
                                 <DataTemplate>
                                     <StackPanel Height="30" Orientation="Horizontal">
                                         <CheckBox Margin="3 5" 
+                                                  Width="20"
+                                                  Height="20"
                                                   VerticalAlignment="Center"
-                                                  IsChecked="{Binding Checked}"/>
+                                                  IsChecked="{Binding Checked}"
+                                                  Style="{StaticResource MaterialDesignUserForegroundCheckBox}" 
+                                                  Cursor="Hand"/>
                                         <TextBlock Margin="2 0"
                                                    Width="155"
                                                    FontSize="14"
                                                    VerticalAlignment="Center"
                                                    Text="{Binding Name}"/>
-                                        <Canvas Width="90"
+                                        <Canvas Width="80"
                                                 Height="28"
                                                 VerticalAlignment="Center">
-                                            <ComboBox Width="90"
+                                            <ComboBox Width="80"
                                                       Height="28"
                                                       Visibility="{Binding IsComboBox, Converter={StaticResource BooleanToVisibilityConverter}}"
                                                       SelectedIndex="{Binding SelectedIndex}"
                                                       ItemsSource="{Binding Selections}"/>
-                                            <TextBox Width="90"
+                                            <TextBox Width="80"
                                                      Height="28"
                                                      FontSize="14"
                                                      Visibility="{Binding IsTextBox, Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -536,7 +529,6 @@
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
                     </ScrollViewer>
-                    <GridSplitter Width="{Binding RelativeSource={RelativeSource AncestorType=StackPanel}, Path=Width}" Height="1" />
                 </StackPanel>
                 
                 <!--<StackPanel Orientation="Horizontal"
@@ -568,4 +560,4 @@
         </Grid>
         
     </Grid>
-</mah:MetroWindow>
+</Window>
