--- a/IDCA.Client/View/HeaderSettingView.xaml
+++ b/IDCA.Client/View/HeaderSettingView.xaml
@@ -19,19 +19,20 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="20 0 0 0">
 
             <StackPanel.Resources>
-                <Style TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+                <Style TargetType="Button">
                     <Setter Property="Width" Value="100"/>
                     <Setter Property="Height" Value="30"/>
                     <Setter Property="Margin" Value="5"/>
                     <Setter Property="FontSize" Value="13"/>
+                    <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background}"/>
                 </Style>
-                <Style TargetType="TextBlock" BasedOn="{StaticResource MahApps.Styles.TextBlock}">
+                <Style TargetType="TextBlock">
                     <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                     <Setter Property="FontSize" Value="15"/>
                     <Setter Property="VerticalAlignment" Value="Center"/>
                     <Setter Property="Margin" Value="5"/>
                 </Style>
-                <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
+                <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
                     <Setter Property="Width" Value="120"/>
                     <Setter Property="Height" Value="30"/>
                     <Setter Property="Margin" Value="5"/>
@@ -60,7 +61,7 @@
                             <Grid>
 
                                 <Grid.Resources>
-                                    <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
+                                    <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
                                         <Setter Property="Width" Value="150"/>
                                         <Setter Property="Height" Value="30"/>
                                         <Setter Property="Margin" Value="5"/>
@@ -69,7 +70,7 @@
                                         <Setter Property="VerticalAlignment" Value="Center"/>
                                         <Setter Property="VerticalContentAlignment" Value="Center"/>
                                     </Style>
-                                    <Style TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+                                    <Style TargetType="Button">
                                         <Setter Property="Width" Value="80"/>
                                         <Setter Property="Height" Value="30"/>
                                         <Setter Property="FontSize" Value="14"/>
@@ -77,7 +78,7 @@
                                         <Setter Property="VerticalContentAlignment" Value="Center"/>
                                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
                                     </Style>
-                                    <Style TargetType="TextBlock" BasedOn="{StaticResource MahApps.Styles.TextBlock}">
+                                    <Style TargetType="TextBlock">
                                         <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                                         <Setter Property="FontSize" Value="15"/>
                                         <Setter Property="VerticalAlignment" Value="Center"/>
