--- a/IDCA.Client/View/TableSettingWindow.xaml
+++ b/IDCA.Client/View/TableSettingWindow.xaml
@@ -1,22 +1,19 @@
-﻿<mah:MetroWindow x:Class="IDCA.Client.View.TableSettingWindow"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                 xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                 xmlns:view="clr-namespace:IDCA.Client.View"
-                 xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
-                 d:DataContext="{d:DesignInstance Type=viewmodel:TableSettingWindowViewModel}"
-                 mc:Ignorable="d"
-                 Height="800" 
-                 Width="980"
-                 ResizeMode="CanMinimize"
-                 Background="{StaticResource IDCA.Brushes.Window.Background}"
-                 >
+﻿<Window x:Class="IDCA.Client.View.TableSettingWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:view="clr-namespace:IDCA.Client.View"
+        xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
+        d:DataContext="{d:DesignInstance Type=viewmodel:TableSettingWindowViewModel}"
+        mc:Ignorable="d"
+        Height="800" 
+        Width="980"
+        ResizeMode="CanMinimize">
 
     <Window.Resources>
-        <BooleanToVisibilityConverter x:Key="BtoVConverter"/>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Window.Resources>
     
     <Grid>
@@ -36,13 +33,13 @@
             
             <StackPanel Grid.Column="0" Orientation="Horizontal">
                 <StackPanel.Resources>
-                    <Style TargetType="Button">
+                    <Style TargetType="Button" BasedOn="{StaticResource MaterialDesignPaperButton}">
                         <Setter Property="Margin" Value="5"/>
                         <Setter Property="Width" Value="60"/>
                         <Setter Property="Height" Value="30"/>
                         <Setter Property="Cursor" Value="Hand"/>
                     </Style>
-                    <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
+                    <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
                         <Setter Property="Width" Value="120"/>
                         <Setter Property="Height" Value="30"/>
                         <Setter Property="IsReadOnly" Value="True"/>
@@ -139,19 +136,14 @@
             </Grid.ColumnDefinitions>
 
             <Border Grid.Column="0"
-                    BorderBrush="{StaticResource IDCA.Brushes.Window.BorderBrush}"
-                    Background="{StaticResource IDCA.Brushes.Window.Background}"
                     BorderThickness="0 0 1 0">
                 <TreeView BorderThickness="0"
                           FontSize="15"
-                          FontFamily="{StaticResource IDCA.Font.Family}"
                           Background="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}"
-                          Style="{StaticResource MahApps.Styles.TreeView}"
                           ItemsSource="{Binding Tree.Children}"
                           d:ItemsSource="{d:SampleData ItemCount=5}">
                     <TreeView.ItemContainerStyle>
-                        <Style TargetType="TreeViewItem" BasedOn="{StaticResource MahApps.Styles.TreeViewItem}">
-                            <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}"/>
+                        <Style TargetType="TreeViewItem" BasedOn="{StaticResource MaterialDesignTreeViewItem}">
                             <Setter Property="IsSelected" Value="{Binding IsSelected}"/>
                         </Style>
                     </TreeView.ItemContainerStyle>
@@ -159,13 +151,12 @@
                         <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                             <Grid Height="26" Margin="0 3">
                                 <Grid.Resources>
-                                    <Style TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+                                    <Style TargetType="Button">
                                         <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"/>
-                                        <Setter Property="Foreground" Value="{StaticResource MahApps.Brushes.Button.Flat.Foreground}"/>
                                     </Style>
                                 </Grid.Resources>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="100"/>
                                     <ColumnDefinition Width="40"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Grid.Column="0" 
@@ -214,16 +205,16 @@
 
             <view:OverviewControl Grid.Column="1"
                                   DataContext="{Binding SelectedNode.OverviewViewModel}"
-                                  Visibility="{Binding Node.IsOverView, Converter={StaticResource BtoVConverter}}"/>
+                                  Visibility="{Binding Node.IsOverView, Converter={StaticResource BooleanToVisibilityConverter}}"/>
             
             <view:HeaderSettingView Grid.Column="1" 
                                     DataContext="{Binding SelectedNode.HeaderViewModel}"
-                                    Visibility="{Binding Node.IsHeaderView, Converter={StaticResource BtoVConverter}}"/>
+                                    Visibility="{Binding Node.IsHeaderView, Converter={StaticResource BooleanToVisibilityConverter}}"/>
             
             <view:TableSettingView Grid.Column="1" 
                                    DataContext="{Binding SelectedNode.TableViewModel}"
-                                   Visibility="{Binding Node.IsTableView, Converter={StaticResource BtoVConverter}}"/>
+                                   Visibility="{Binding Node.IsTableView, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
         </Grid>
     </Grid>
-</mah:MetroWindow>
+</Window>
