--- a/IDCA.Client/View/AxisSettingWindow.xaml
+++ b/IDCA.Client/View/AxisSettingWindow.xaml
@@ -496,7 +496,10 @@
                                       d:ItemsSource="{d:SampleData ItemCount=5}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <StackPanel Height="30" Orientation="Horizontal">
+                                    <StackPanel Height="30"
+                                                Width="280"
+                                                HorizontalAlignment="Left"
+                                                Orientation="Horizontal">
                                         <CheckBox Margin="3 5" 
                                                   Width="20"
                                                   Height="20"
@@ -505,7 +508,7 @@
                                                   Style="{StaticResource MaterialDesignUserForegroundCheckBox}" 
                                                   Cursor="Hand"/>
                                         <TextBlock Margin="2 0"
-                                                   Width="155"
+                                                   Width="160"
                                                    FontSize="14"
                                                    VerticalAlignment="Center"
                                                    Text="{Binding Name}"/>
